Got things working, separated out directions some

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
           </div>
           <div class="meal-result">
               <h2 class = "title">Your Search Results:</h2>
-              <div class="meal">
+              <div id="meal">
                   <!-- Meal Item-->
                   <!-- <div class = "meal-item"
                         <div class = "meal-img">
